fixed layout issues and added custom scroll bar

--- a/client/src/components/Footer/footer.styles.css
+++ b/client/src/components/Footer/footer.styles.css
@@ -3,8 +3,8 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  /* height: 8vh; */
   padding: 10px 30px;
+  min-width: 1020px;
   display: flex;
   justify-content: space-between;
   background-image: linear-gradient(90deg, #af2896, #509bf5);
