--- a/client/src/components/SideBar/sideBar.styles.css
+++ b/client/src/components/SideBar/sideBar.styles.css
@@ -2,6 +2,7 @@
   background-color: black;
   padding: 20px;
   grid-row: 1 / 3;
+  min-width: 200px;
 }
 
 .sideBar_logo {
