--- a/client/src/components/TopBar/TopBar.styles.css
+++ b/client/src/components/TopBar/TopBar.styles.css
@@ -3,7 +3,8 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
+  min-width: 800px;
   padding-left: 60px;
   z-index: 2;
 }
