--- a/client/src/components/TopBar/TopBarUserWidget.styles.css
+++ b/client/src/components/TopBar/TopBarUserWidget.styles.css
@@ -27,7 +27,6 @@
   margin-right: 30px;
   max-width: 350px;
   min-width: 160px;
-  overflow-y: auto;
   padding: 4px;
   display: none;
   background-color: #282828;
