--- a/client/src/pages/ArtistsBody/ArtistBody.styles.css
+++ b/client/src/pages/ArtistsBody/ArtistBody.styles.css
@@ -1,6 +1,6 @@
 .artist_body {
   color: #fff;
-  overflow-y: scroll;
+
   background-color: #121212;
   transform: translateY(-60px);
   /* height: calc(100vh - 20px); */
