--- a/client/src/pages/Home/Home.css
+++ b/client/src/pages/Home/Home.css
@@ -2,15 +2,28 @@
   background-color: #121212;
   padding: 10px;
   overflow-y: auto;
-  -ms-overflow-style: none;
   background: #1e1e1e;
-  background: -webkit-linear-gradient(top, #1e1e1e, #121212);
-  background: -moz-linear-gradient(top, #1e1e1e, #121212);
   background: linear-gradient(to bottom, #1e1e1e, #121212);
-  transform: translateY(-60px);
+  position: relative;
+  top: -60px;
+  min-width: 800px;
   padding-top: 60px;
 }
 
-.home::-webkit-scrollbar {
-  display: none;
+::-webkit-scrollbar {
+  width: 20px;
+}
+::-webkit-scrollbar-track {
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #282828;
+  border-radius: 20px;
+  border: 6px solid transparent;
+  background-clip: content-box;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #3f3f3f;
 }
